--- a/ucdash/static/media/css/nav.css
+++ b/ucdash/static/media/css/nav.css
@@ -9,6 +9,7 @@ ul.nav,
 ul.nav * { margin:0;padding:0;}
 ul.nav {
   position:relative;
+  background:#666;
   max-width:100%;
   height:2.5em;
   }
@@ -37,6 +38,7 @@ ul.nav li ul li {
 }
 ul.nav li a {
 	color:#fff;
+	background:#666;
 	font-weight:bold;
 	text-decoration:none;
 	display:block;
@@ -59,33 +61,30 @@ ul.nav li ul li a {
 ul.nav li:hover a,
 ul.nav li a:hover,
 ul.nav li a:focus {color:#000; background:#ccc;}
-ul.nav li a:active {color:#678; background:#fff;}
+ul.nav li a:active {color:#666; background:#fff;}
 ul.nav li:hover ul {left:0;z-index:10}
 ul.nav li ul,
-ul.nav liv {background:#ccc !important}
-ul.nav li:hover ul li a {color:#456;}
+ul.nav li {background:#ccc !important}
+ul.nav li:hover ul li a {color:#444;}
 ul.nav li:hover ul li a:hover {color:#000; background:#fff;}
-ul.nav li:hover ul li a:active {color:#678; background:#fff;}
+ul.nav li:hover ul li a:active {color:#666; background:#fff;}
 
-ul.nav li.current a {color:#678; background:#fff; cursor:default; font-weight:bold;}
+ul.nav li.current a {color:#666; background:#fff; cursor:default; font-weight:bold;}
 ul.nav li.current ul {left:0;z-index:5}
 ul.nav li.current ul,
 ul.nav li.current {background:#ccc !important}
-ul.nav li.current ul li a {color:#456; font-weight:normal;}
+ul.nav li.current ul li a {color:#444; background:#ccc; font-weight:normal;}
 ul.nav li.current ul li a:hover {color:#000; background:#fff;}
 ul.nav li ul li.current a,
 ul.nav li ul li.current a:hover,
-ul.nav li.current:hover ul li a:active {color:#678; background:#fff;}
-
+ul.nav li.current:hover ul li a:active {color:#666; background:#fff;}
 
 
 /* navigation (vertical subnavigation)
 ----------------------------------------------- */
 ul.nav {
-    padding-left: 4%;
-    padding-right: 4%;
+  background:#666;
 }
-
 ul.main li {
   position:relative;
   top:0;
@@ -102,6 +101,7 @@ ul.main li a {
 	line-height:2.5em;
 	border:0;
 	color:#fff;
+	background:#666;
 }
 ul.main li ul li a {
   width:12em;
@@ -109,29 +109,22 @@ ul.main li ul li a {
   height:2em;
   text-align:left;
   color:#fff;
+  border-top:1px solid #444;
+  background:#444;
 }
-ul.main li a:focus {color:#fff;}
-ul.main li a:hover {background: transparent; background-image: url("../img/darker_trans.png");}
-
+ul.main li a:focus {color:#fff; background:#666;}
 ul.main li ul li a:hover {
   color:#fff;
+  background:#555;
 }
-
 ul.main li:hover a {
   color:#fff;
+  background:#555;
 }
-
 ul.main li:hover ul li a {color:#fff;}
-ul.main li:hover ul li a:hover {color:#fff; }
-ul.main li:hover a:active {}
-ul.main li:hover ul li a:active {color:#fff;}
-
-.navbar {
-    padding-bottom: 0px;
-    background-image: url("../img/dark_trans.png");
-    border-bottom: 1px solid black;
-    border-top: 1px solid black;
-}
+ul.main li:hover ul li a:hover {color:#fff; background:#444;}
+ul.main li:hover a:active {background:#444;}
+ul.main li:hover ul li a:active {color:#fff; background:#222;}
 
 
 /* secondary list
@@ -146,7 +139,7 @@ ul.nav li.secondary span.status {
 	padding:0 1em;
 	line-height:2.77em;
 	height:2.77em;
-    font-size:0.9em;
+  font-size:0.9em;
 }
 ul.nav li.secondary span.status a {
 	float:none;
@@ -166,7 +159,9 @@ ul.nav li.secondary span.status span {
 }
 ul.nav li.secondary:hover a {
 	color:#fff;
-	}
+	background:#666;
+}
 ul.nav li.secondary:hover a:hover {
-	}
-ul.nav li.secondary:hover a:active {}
+	background:#555;
+}
+ul.nav li.secondary:hover a:active {background:#444;}
