finally got some stuff working. Client is still pretty hard-coded but the system now does 'something'. Changed the menu, introduced job view and notification_detail view as well as restored the ucp stuff but this time by overriding things in the base.css instead of changing the fluid960 related .css files.

--- a/ucdash/templates/base.html
+++ b/ucdash/templates/base.html
@@ -24,10 +24,9 @@
     </h1>
         <div class="navbar">
             <ul class="nav main">
+                <li><a href="/">home</a></li>
                 <li><a href="/admin/">admin</a></li>
-                <li><a href="/logs/">logs</a></li>
-                <li><a href="/jobs/">jobs</a></li>
-                <li><a href="/groups/">job groups</a></li>
+                <li><a href="/about/">about</a></li>
             </ul>
         </div>
     </div>
