--- a/ucdash/static/media/css/base.css
+++ b/ucdash/static/media/css/base.css
@@ -1,3 +1,76 @@
+body {
+	background: #fff;
+	border-top: 1px solid #000;
+}
+/* branding
+----------------------------------------------- */
+div#branding {
+    background-image: url('../img/acu_camo_wide.png')
+}
+
+h1#branding-h1 {
+	font-weight:normal;
+	font-size:3em;
+    font-variant: small-caps;
+    text-shadow: 2px 2px 2px #000;
+    text-align: left;
+    background: transparent;
+	padding:.7em 1em;
+	margin-bottom:0;
+
+}
+
+/* navigation
+------------------------------------------------ */
+ul.nav {
+  background: transparent url('../img/dark_trans.png');
+  border-top: 1px solid #000000;
+  border-bottom: 1px solid #000000;
+  }
+
+ul.nav li {
+    background: transparent;
+}
+
+ul.nav li a {
+  background: transparent;
+}
+
+ul.nav li ul,
+ul.nav li {background:transparent !important}
+
+ul.nav li:hover a,
+ul.nav li a:hover,
+ul.nav li a:focus {color: #fff; background: transparent url('../img/darker_trans.png');}
+ul.nav li a:active {color:#fff; background: transparent url('../img/darker_trans.png');}
+
+
+/* site information
+----------------------------------------------- */
+div#site_info {
+    background: url('../img/acu_camo_wide.png');
+    padding: 10px 10px 2px 10px;
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #000;
+}
+
+#site_info .sitebox {
+	color:#ccc;
+	background:transparent;
+}
+
+#site_info a {
+	color:#fff;
+}
+
+#site_info a:hover {
+	color:#000;
+}
+
+
+/* other stuff
+------------------------------------------------ */
+
 td.icon {
     width: 0px;
 }
@@ -13,3 +86,4 @@ td.icon {
 .wiki_page div {
     border-bottom: 10px;
 }
+
