--- a/ucdash/templates/job.html
+++ b/ucdash/templates/job.html
@@ -7,5 +7,15 @@
     <div><span>Name:</span> {{ job.name }}</div>
     <div><span>Slug:</span> {{ job.slug }}</div>
     <div><span>Description:</span> {{ job.description }}</div>
-    <div>...Show List of 'Recent' notifications? pagination?</div>
+    <div class="notifications">
+    <table>
+        <tr><th>at</th><th>result</th><th>log</th></tr>
+
+    {% for n in job.notifications.all|slice:":5" %}
+            <tr>
+                <td><a href="{{ n.get_absolute_url }}">{{ n.at|date:"Y-m-d h:i:s A" }}</a></td><td>{{ n.result }}</td><td><pre>{{ n.log|slice:":200" }}</pre></td>
+            </tr>
+    {% endfor %}
+    </table>
+    </div>
 {% endblock %}
