tweaked the styles of the views. Added a green/gray on black scheme for the log output and added better headers and layout to the other views.

--- a/ucdash/static/media/css/base.css
+++ b/ucdash/static/media/css/base.css
@@ -20,6 +20,18 @@ h1#branding-h1 {
 
 }
 
+
+/* log view
+------------------------------------------------ */
+.log_view {
+    background: black;
+    color: #D4D2CB;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+
+
 /* navigation
 ------------------------------------------------ */
 ul.nav {
