--- a/ucdash/templates/notification_detail.html
+++ b/ucdash/templates/notification_detail.html
@@ -5,13 +5,16 @@
 
 {% block content %}
     <table>
-       <thead><tr><td>field</td><td>value</td></tr></thead>
+       <thead><tr><th>field</th><th>value</th></tr></thead>
        <tr></tr><td>Result:</td><td> {{ notification.result }}</td></tr>
        <tr></tr><td>Date/Time:</td><td> {{ notification.at }}</td></tr>
        <tr></tr><td>Duration:</td><td> {{ notification.duration }}ms</td></tr>
-       <tr></tr><td>Log:</td><td><pre>{{ notification.log }}</pre></td></tr>
             {% for e in notification.extra_info.all %}
             <tr><td>{{ e.field_name }}</td><td>{{ e.field_value }}</td></tr>           
             {% endfor %}
-    </table>
+    </table>    
+    <div class="log_view">
+    <pre>{{ notification.log }}</pre>
+    </div>
+
 {% endblock %}
