added login_required on the views, login registration view and template and changed the job view to now display a hacked up version of the URL to the API. It's likely not right, but it's better than nothing.

--- a/ucdash/templates/job.html
+++ b/ucdash/templates/job.html
@@ -73,7 +73,7 @@ window.addEvent('domready', function() {
         <thead><tr><th>field</th><th>value</th></tr></thead>
         <tbody>
             <tr><td>Name</td><td>{{ job.name }}</td></tr>
-            <tr><td>Slug</td><td>{{ job.slug }}</td></tr>
+            <tr><td>API URL</td><td>http://{{ host }}{% url api:job_notify job_slug=job.slug %}</td></tr>
             <tr><td>Description</td><td>{{ job.description }}</td></tr>
         </tbody>
     </table>
