--- a/ucdash/templates/404.html
+++ b/ucdash/templates/404.html
@@ -2,6 +2,8 @@
 
 {% block title %}Page not found{% endblock %}
 
+{% block navbar %}{% endblock %}
+
 {% block content %}
 <h1>Page not found</h1>
 
