--- a/ucdash/templates/base.html
+++ b/ucdash/templates/base.html
@@ -24,6 +24,7 @@
         <a href="/">UC Dashboard</a>
        {% endblock %}
     </h1>
+        {% block navbar %}
         <div class="navbar">
             <ul class="nav main">
                 <li><a href="/">home</a></li>
@@ -31,6 +32,7 @@
                 <li><a href="/about/">about</a></li>
             </ul>
         </div>
+        {% endblock %}
     </div>
 
 
